@@ -2,4 +2,4 @@ PREFIX=$(HOME)/usr
 PROJNAME=zeo
 VERSION=1.2.1
 
-DEPENDENCY="zeda=1.1.2;zm=1.1.1"
+DEPENDENCY="zeda=1.1.3;zm=1.1.4"
